# DeepLearningCatGen

./: .cluster.gitignore  .gitignore  README.md  pyproject.toml
presentation/: PLAN.md
scope/: scope.aux  scope.fdb_latexmk  scope.fls  scope.out  scope.tex
scripts/: build_figures.py  build_report.py  gen_configs.py  lightning_submit.py  plot_metrics.py  prepare_data.py  preview_dataset.py  run_eval.sh  run_phase.sh  studio_full_smoke.sh
scripts/slurm/: catgen_smoke.sbatch  catgen_smoke_tesla.sbatch  catgen_sweep.sbatch  catgen_sweep_lite.sbatch  catgen_sweep_tesla.sbatch  check_smoke_artifacts.sh  eden.env  job_env.sh  link_data.sh  run_sweep.sh  setup_eden.sh
src/catgen/: __init__.py  artifacts.py  data.py  eval_fid.py  eval_quality.py  interpolate.py  leaderboard.py  sample.py  train.py
src/catgen/configs/: aae_smoke.yaml  aae_z128_lr1e-04.yaml  aae_z128_lr1e-05.yaml  aae_z64_lr1e-04.yaml  aae_z64_lr1e-05.yaml  dcgan_smoke.yaml  dcgan_z128_lr1e-04_bs32.yaml  dcgan_z128_lr1e-04_bs64.yaml  dcgan_z128_lr2e-04_bs32.yaml  dcgan_z128_lr2e-04_bs64.yaml  dcgan_z64_lr1e-04_bs32.yaml  dcgan_z64_lr1e-04_bs64.yaml  dcgan_z64_lr2e-04_bs32.yaml  dcgan_z64_lr2e-04_bs64.yaml  vqvae_K128_D128_lr1e-04.yaml  vqvae_K128_D128_lr2e-04.yaml  vqvae_K128_D64_lr1e-04.yaml  vqvae_K128_D64_lr2e-04.yaml  vqvae_K512_D128_lr1e-04.yaml  vqvae_K512_D128_lr2e-04.yaml  vqvae_K512_D64_lr1e-04.yaml  vqvae_K512_D64_lr2e-04.yaml  vqvae_smoke.yaml
src/catgen/lightning_modules/: aae_lm.py  gan_lm.py  vqvae_lm.py
src/catgen/models/: aae.py  dcgan.py  vqvae.py
