[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "catgen"
version = "0.0.1"
description = "Lightweight generative models on Cat Dataset (DL Project III)"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchvision",
    "lightning",
    "pillow",
    "pyyaml",
    "numpy",
    "clean-fid",
    "matplotlib",
    "lightning-sdk",
]

[tool.setuptools.packages.find]
where = ["src"]
