[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "catgen"
version = "0.0.1"
description = "Lightweight generative models on Cat Dataset (DL Project III)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5,<2.6",
    "torchvision>=0.20,<0.21",
    "lightning",
    "pillow",
    "pyyaml",
    "numpy",
    "clean-fid",
    "matplotlib",
    "lightning-sdk",
]

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
